117-AKS-NGINX-MultipleIngressControllers-001/201-K8s-Deployments/201-K8s-App-Public-001/1-app-namespace.yaml
###################################################################################################################
# The deployment of the application namespace
###################################################################################################################

apiVersion: v1
kind: Namespace
metadata:
  name: app
