117-AKS-NGINX-MultipleIngressControllers-001/201-K8s-Deployments/201-K8s-App-Public-001/2-app-deployment.yaml
#################################################################################################################
# The deployment for the application
#################################################################################################################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: app
spec:
  selector:
    matchLabels:
      app: app
  replicas: 1
  template:
    metadata:
      labels:
        app: app
    spec:
      nodeSelector:
        nodeType: application-node
      containers:
      - name: app
        image: cpolydorou/httpdselfsigned:latest
        ports:
        - containerPort: 9000
        resources:
          requests:
            cpu: "800m"
            memory: "512Mi"      
          limits:
            cpu: "800m"
            memory: "512Mi"
