117-AKS-NGINX-MultipleIngressControllers-001/201-K8s-Deployments/201-K8s-App-Public-001/4-app-ingress.yaml
###################################################################################################################
# The deployment of the nginx ingress for HTTP
###################################################################################################################

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: app-ingress-http
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP

spec:
  ingressClassName: nginx
  rules:
    - host: app.domain.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80               
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 443
